2004-08-17  Sebastien Pouliot  <sebastien@ximian.com>

	* VersionTest.cs: Added tests when cloning a version with no build and
	no revision numbers (-1).

2004-08-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicationIdTest.cs: New. Unit tests for ApplicationId (NET_2_0).
	* ApplicationIdentityTest.cs: New. Unit tests for ApplicationIdentity
	(NET_2_0).
	* AppDomainTest.cs: Added new unit tests for AppDomain (both fx 1.1 
	and 2.0).

2004-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DoubleFormatterTest.cs: Added a new test for a negative roundtrip
	(which was broken).

2004-06-19  Atsushi Enomoto  <atsushi@ximian.com>

	* FloatingPointFormatterTest.cs : Format literal (i.e. '...') in
	  format string should be kept as is.

2004-06-18  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : Improved CultureIndependentTests(). Error message
	  contains specific locale and error location. Verified by run-test-
	  ondotnet and commented out X509-like pattern.(not all culture passes)

2004-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* DoubleFormatterTest.cs: Added new cases from bug reports 60110 
	(roundtrip format) and 60111 (non-banker rounding).

2004-06-15  Sebastien Pouliot  <sebastien@ximian.com>

	* ConvertTest.cs: Changed compare between Decimals (from a string 
	compare to Decimal.Equals) because the issue wasn't related to the
	Convert class. See #60227 for more details.
	* DecimalTest.cs: Added test to ensure we keep/output the decimals
	precision (#59425). Added tests to see how many decimals are supported
	in "G" before switching to "E".

2004-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* TimeSpanTest.cs: Added more cases with MinValue and MaxValue for 
	each parameter of the constructor. Some tests are ignored because
	they are too long to run (but useful when debugging).

2004-06-14  Atsushi Enomoto  <atsushi@ximian.com>

	* FloatingPointFormatterTest.cs : Added more permille and percent
	  formatting test.
